<resources>
    <string name="app_name">E-Learning</string>

    <string name="retry">Retry</string>

    <!--  Input Fields Error Messages  -->
    <string name="error_empty_name">Please enter Name</string>
    <string name="error_empty_email">Please enter Email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_empty_password">Please enter Password</string>
    <string name="error_invalid_password">Password should be 6–16 characters long</string>
    <string name="error_empty_conf_password">Please re-enter Password</string>
    <string name="error_password_mismatch">Password does not match</string>
    <string name="error_empty_new_password">Please enter New Password</string>
    <string name="error_empty_message">Please enter Message</string>

    <!--  Nav View  -->
    <string name="nav_study">Study</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_send_feedback">Send Feedback</string>
    <string name="nav_report_issue">Report Issue</string>
    <string name="nav_about_us">About Us</string>

    <!-- Login Activity  -->
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register_here">Don\'t have account? Register Here</string>

    <!--  Register Activity  -->
    <string name="register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_conf_password">Confirm Password</string>
    <string name="login_here">Already have account? Login Here</string>

    <!--  Profile Fragment  -->
    <string name="label_profile">Profile</string>
    <string name="change_password">Change Password?</string>
    <string name="save_profile">Save Profile</string>
    <string name="no_data">No Data</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_deactivate_account">Deactivate Account</string>
    <string name="dialog_title_confirm_action">Confirm Action</string>
    <string name="dialog_msg_confirm_action">This will deactivate your account and your profile will not be visible anymore in leader board</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_deactivate">Deactivate</string>

    <!-- Change Password Fragment -->
    <string name="label_change_password">Change Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="update_password">Update Password</string>

    <!--  Subjects Fragment  -->
    <string name="label_subjects">Subjects</string>
    <string name="no_subjects">No Subjects</string>

    <!--  Topics Fragment  -->
    <string name="label_topics">Topics</string>
    <string name="no_topics">No Topics</string>

    <!-- Subtopics Fragment -->
    <string name="label_subtopics">Subtopics</string>
    <string name="no_subtopics">No Subtopics</string>

    <!-- Subtopic Fragment -->
    <string name="label_subtopic">Subtopic</string>

    <!-- Feedback Fragment -->
    <string name="label_feedback">Feedback</string>
    <string name="hint_message">Message</string>
    <string name="send_feedback">Send Feedback</string>

    <!-- Report Fragment -->
    <string name="label_report">Report</string>
    <string name="submit_report">Submit Report</string>

    <!--  About Fragment  -->
    <string name="label_about_us">About Us</string>
    <string name="about_matter">Welcome to E-learning app. This is a sample application for demonstration purpose. This app contains video tutorials for students where they can explore their subjects of interest and start studying and get most of it and be ready for exams.</string>

    <!--  Blogs Fragment  -->
    <string name="no_blogs">No Blogs</string>

    <!-- Blog Details Fragment -->
    <string name="label_blog_details">Blog Details</string>

</resources>
