<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.vaibhavdhunde.app.elearning.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.vaibhavdhunde.app.elearning.ui.profile.ProfileFragment"
        android:label="@string/label_profile" >
        <action
            android:id="@+id/actionChangePassword"
            app:destination="@id/changePasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.vaibhavdhunde.app.elearning.ui.changepassword.ChangePasswordFragment"
        android:label="@string/label_change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>