<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.vaibhavdhunde.app.elearning.ui.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.changepassword.ChangePasswordFragment">

        <ScrollView
            android:id="@+id/change_password_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/parent_change_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/progress_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress_indicator"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/change_password_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:text="@={viewmodel.password}" />

                    <EditText
                        android:id="@+id/input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:text="@={viewmodel.newPassword}" />

                    <EditText
                        android:id="@+id/input_conf_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_conf_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:text="@={viewmodel.confPassword}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> viewmodel.updatePassword()}"
                        android:text="@string/update_password" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>