<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.vaibhavdhunde.app.elearning.ui.profile.ProfileViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <ScrollView
            android:id="@+id/profile_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/parent_profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/progress_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress_indicator"
                        style="?android:attr/progressBarStyle"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/profile_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="@{viewmodel.dataAvailable ? View.VISIBLE : View.GONE}">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!viewmodel.dataLoading}"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionDone"
                        android:maxLength="250"
                        android:text="@={viewmodel.name}"
                        tools:text="@tools:sample/full_names" />

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:enabled="false"
                        android:text="@{viewmodel.user.email}"
                        tools:text="test@email.com" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_change_password"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> viewmodel.changePassword()}"
                        android:text="@string/change_password"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> viewmodel.updateProfileName()}"
                        android:text="@string/save_profile" />

                </LinearLayout>

                <TextView
                    android:id="@+id/no_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_data"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{viewmodel.dataAvailable ? View.GONE : View.VISIBLE}"
                    tools:visibility="gone" />

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>